--- a/inst/Markdown/Share.Rmd
+++ b/inst/Markdown/Share.Rmd
@@ -48,7 +48,7 @@ output:
 params:
   dv_ds_nm_and_url_chr: !r NA_character_
   dv_mdl_desc_1L_chr: !r NA_character_
-  fake_ds_tb: !r NULL
+  ds_tb: !r NULL
   inc_fl_types_chr: ".pdf"
   nbr_of_digits_1L_int: !r 2L
   output_type_1L_chr: "PDF"
