--- a/vignettes/_Prototype_CSP_AQOL6D_TTU.Rmd
+++ b/vignettes/_Prototype_CSP_AQOL6D_TTU.Rmd
@@ -67,7 +67,9 @@ path_params_ls <- TTU::make_path_params_ls("fake_data.rds")
 As this is an illustrative example, we first must create a fake dataset (if using real data, skip this step).
 
 ```{r message=FALSE}
-ds_tb <- readRDS(url("https://dataverse.harvard.edu/api/access/datafile/4749888"))
+ds_tb <- youthvars::replication_popl_tb %>% 
+            youthvars::transform_raw_ds_for_analysis() %>%
+            dplyr::select(-BADS,-GAD7, -OASIS,-SCARED)
 ```
 ```{r inputds, eval = knitr::is_html_output(), results='asis'}
 ds_tb %>%
@@ -80,7 +82,7 @@ ds_tb %>%
 A data dictionary must also be supplied for the dataset. The dictionary must be of class `ready4_dictionary` from the `ready4use` package.
 
 ```{r}
-dictionary_tb <- TTU::make_eq5d_ds_dict(ds_tb)
+dictionary_tb <-  youthvars::make_final_rpln_ds_dict() #youthvars::make_tfd_repln_ds_dict_r3()
 ```
 ```{r dictionary, eval = knitr::is_html_output(), results='asis'}
 dictionary_tb %>%
@@ -98,16 +100,16 @@ use_fake_data_1L_lgl <-  TRUE
 We describe the features of our dataset that are most relevant to the analyses we are planning to undertake. Note all, Multi-Attribute Utility Instrument (MAUI) question variables must start with a common prefix, which needs to be passed to the `maui_item_pfx_1L_chr` argument. The dataset does not need to include variables for total health utility scores (weighted and unweighted), as these variables will be computed during the analysis. However, you can supply the names you wish assigned to these variables once they are computed using the `utl_wtd_var_nm_1L_chr` and `utl_unwtd_var_nm_1L_chr` arguments.
 
 ```{r echo = TRUE}
-ds_descvs_ls <- TTU::make_ds_descvs_ls(candidate_predrs_chr = c("k10_int","psych_well_int"),
-                     cohort_descv_var_nms_chr = c("d_age", "Gender", "d_relation_s","d_sexual_ori_s", "Region", "CALD", "d_studying_working"),
+ds_descvs_ls <- TTU::make_ds_descvs_ls(candidate_predrs_chr = c("K6","PHQ9"),
+                     cohort_descv_var_nms_chr = c("d_age", "d_relation_s","d_studying_working","c_p_diag_s","c_clinical_staging_s"),
                      dictionary_tb = dictionary_tb, 
-                     id_var_nm_1L_chr = "uid", 
-                     msrmnt_date_var_nm_1L_chr = "data_collection_dtm",
-                     round_var_nm_1L_chr = "Timepoint", 
-                     round_vals_chr = c("BL", "FUP"),
-                     maui_item_pfx_1L_chr = "eq5dq_", 
-                     utl_wtd_var_nm_1L_chr = "EQ5D_total_dbl", 
-                     utl_unwtd_var_nm_1L_chr = "EQ5d_cumulative_dbl")
+                     id_var_nm_1L_chr = "fkClientID", 
+                     msrmnt_date_var_nm_1L_chr = "d_interview_date",
+                     round_var_nm_1L_chr = "round", 
+                     round_vals_chr = c("Baseline", "Follow-up"),
+                     maui_item_pfx_1L_chr = "aqol6d_q", 
+                     utl_wtd_var_nm_1L_chr = "aqol6d_total_w", 
+                     utl_unwtd_var_nm_1L_chr = "aqol6d_total_c")
 ```
 
 ## Candidate predictors
@@ -115,10 +117,9 @@ We create a lookup table with metadata on the dataset variables that we will be 
 
 ```{r}
 predictors_lup <- TTU::TTU_predictors_lup(TTU::make_pt_TTU_predictors_lup(short_name_chr = ds_descvs_ls$candidate_predrs_chr,
-                                              long_name_chr = c("Kessler Psychological Distress - 10 Item Total Score",
-                                                   "Overall Wellbeing Measure (Winefield et al. 2012)"),
-                                              min_val_dbl = c(10,18),
-                                              max_val_dbl = c(50,90),
+                                              long_name_chr = c("K6 total score", "PHQ9 total score"),
+                                              min_val_dbl = 0,
+                                              max_val_dbl = c(24,27),
                                               class_chr = "integer",
                                               increment_dbl = 1,
                                               class_fn_chr = "as.integer",
@@ -132,32 +133,15 @@ We also need to provide information specific to the Multi-Attribute Utility Inst
  - also calculate an unweighted score that is a simple sum of all maui item question responses (e.g. the last three lines of the example `maui_scoring_fn`).
 
 ```{r}
-maui_params_ls <- TTU::make_maui_params_ls(maui_itm_short_nms_chr = c("Mobility", "Self-care", "Activities","Pain","Anxiety"),
-                                      maui_scoring_fn = function(data_tb,
-                                             maui_item_pfx_1L_chr,
-                                             id_var_nm_1L_chr, 
-                                             utl_wtd_var_nm_1L_chr,
-                                             utl_unwtd_var_nm_1L_chr){
-                    require(eq5d)
-                    data_tb %>% 
-                      dplyr::rename_with(~stringr::str_replace(.x,maui_item_pfx_1L_chr,""),
-                                         dplyr::starts_with(maui_item_pfx_1L_chr)) %>%
-                      dplyr::mutate(`:=`(!!rlang::sym(utl_wtd_var_nm_1L_chr), 
-                                         eq5d::eq5d(., country="UK", version = "5L", type = "CW"))) %>%
-                      dplyr::rename_with(~paste0(maui_item_pfx_1L_chr,.x),c("MO","SC","UA","PD","AD")) %>%
-                      dplyr::mutate(`:=`(!!rlang::sym(utl_unwtd_var_nm_1L_chr),                                          rowSums(dplyr::across(dplyr::starts_with(maui_item_pfx_1L_chr))))) %>%
-                      dplyr::filter(!is.na(!!rlang::sym(utl_unwtd_var_nm_1L_chr)))
-                    })
+maui_params_ls <- TTU::make_maui_params_ls(maui_itm_short_nms_chr = c("Household tasks", "Getting around","Morbility","Self care","Enjoy close rels","Family rels", "Community involvement","Despair","Worry", "Sad", "Agitated","Energy level","Control", "Coping","Frequency of pain", "Degree of pain","Pain interference","Vision", "Hearing","Communication"),
+                                      maui_scoring_fn = youthvars::add_adol6d_scores)
 ```
 
 ## Candidate model types
-We next create a lookup table of the candidate model types we wish to explore. A template look-up table is available as part of the `TTU` package, but this may need need to be adapted (e.g. in the below example, we alter the start values of some models) for optimal use with your input data.
+We next create a lookup table of the candidate model types we wish to explore. A template look-up table is available as part of the `TTU` package, but this may need need to be adapted for optimal use with your input data.
 
 ```{r}
-mdl_types_lup <- TTU::mdl_types_lup %>%
-  dplyr::mutate(start_chr = dplyr::case_when(short_name_chr %in% c("GLM_BNL_LGT","GLM_BNL_CLL") ~ c("0.5, -0.05"),
-                                             T ~ start_chr))
-  
+mdl_types_lup <- TTU::mdl_types_lup 
 ```
 
 ```{r mdltypeslup, eval = knitr::is_html_output(), results='asis'}
@@ -181,8 +165,7 @@ analysis_core_params_ls <- TTU::make_analysis_core_params_ls(ds_descvs_ls = ds_d
                                                              mdl_smry_ls = mdl_smry_ls,
                                                              output_format_ls = output_format_ls,
                                                              predictors_lup = predictors_lup,
-                                                             use_fake_data_1L_lgl = use_fake_data_1L_lgl,
-                                                             control_ls = list(adapt_delta = 0.99))
+                                                             use_fake_data_1L_lgl = use_fake_data_1L_lgl)
 ```
 
 ## Reporting details
@@ -196,7 +179,9 @@ paths_ls <- TTU::write_main_oupt_dir(path_params_ls,
 Provide details of dataverse dataset(s) to which results will be posted. If you do not permissions for any dataverse datasets, set `dv_ls <- NULL`.
 
 ```{r echo = TRUE }
-dv_ls <- list(primary_dv_chr = c("fakes","https://doi.org/10.7910/DVN/612HDC"))
+dv_ls <- list(primary_dv_chr = c("firstbounce","https://doi.org/10.7910/DVN/JC6PTV"),
+              #secondary_2_dv_chr = c("fakes","https://doi.org/10.7910/DVN/D74QMP"),
+              secondary_1_dv_chr = c("fakes","https://doi.org/10.7910/DVN/F2H3PA"))
 ```
 
 # Primary Analysis
@@ -204,10 +189,11 @@ dv_ls <- list(primary_dv_chr = c("fakes","https://doi.org/10.7910/DVN/612HDC"))
 ## Consolidate required parameters
 ```{r}
 prmry_analysis_params_ls <- TTU::make_prmry_analysis_params_ls(analysis_core_params_ls,
-                                                          candidate_covar_nms_chr = c("d_sex_birth_s", "d_age",  "d_sexual_ori_s", "d_relation_s", "d_studying_working"),
+                                                          candidate_covar_nms_chr = c("d_age", "SOFAS", "c_p_diag_s", "c_clinical_staging_s", "d_relation_s", "d_studying_working"),
                                                           ds_tb = ds_tb, 
                                                           path_params_ls = path_params_ls,
                                                           maui_params_ls = maui_params_ls)
+# Add utl_weight fn and raw ds tfmn fn
 ```
 
 ## Run analysis
@@ -228,19 +214,6 @@ TTU::write_mdl_smry_rprt(header_yaml_args_ls,
                     path_params_ls = path_params_ls,
                     use_fake_data_1L_lgl = use_fake_data_1L_lgl,
                     output_format_ls = output_format_ls)
-# TTU::write_rprt_with_rcrd(path_to_outp_fl_1L_chr = paste0(paths_ls$output_data_dir_1L_chr,"/I_ALL_OUTPUT_.RDS"), 
-#                      paths_ls = paths_ls,
-#                      header_yaml_args_ls = header_yaml_args_ls,
-#                      use_fake_data_1L_lgl = use_fake_data_1L_lgl,
-#                      subtitle_1L_chr = "Results Report 1: TTU Models (Primary Analysis)",
-#                      rprt_subtitle_1L_chr = "Methods Report 2: Reporting Program (Primary Analysis).",
-#                      rprt_nm_1L_chr = "TS_TTU_Mdls_Smry",
-#                      rcrd_nm_1L_chr = "Write_Rprt_Rcrd",
-#                      output_type_1L_chr = output_format_ls$supplementary_outp_1L_chr,
-#                      rprt_output_type_1L_chr = output_format_ls$supplementary_outp_1L_chr,
-#                      nbr_of_digits_1L_int = output_format_ls$supplementary_digits_1L_int,
-#                      abstract_args_ls = NULL,
-#                      rcrd_rprt_append_ls = path_params_ls[1:2])
 ```
 
 ## Share (de-confidentialised) results
@@ -251,177 +224,48 @@ if(!is.null(dv_ls)){
                            output_format_ls = output_format_ls,
                            path_params_ls = path_params_ls,
                            paths_ls = paths_ls)
-  # params_ls <- list(dv_ds_nm_and_url_chr = dv_ls$primary_dv_chr,
-  #                   dv_mdl_desc_1L_chr = "This is a time series transfer to utility model designed for use with the youthu R package.",
-  #                   inc_fl_types_chr = ".pdf",
-  #                   nbr_of_digits_1L_int = output_format_ls$supplementary_digits_1L_int,
-  #                   output_type_1L_chr = output_format_ls$supplementary_outp_1L_chr,
-  #                   purge_data_1L_lgl = FALSE,
-  #                   subtitle_1L_chr = "Methods Report 3: Sharing Program (Primary Analysis)",
-  #                   use_fake_data_1L_lgl = use_fake_data_1L_lgl) %>%
-  #   append(path_params_ls[1:2])
-  # params_ls %>%
-  #   TTU::write_report(paths_ls = paths_ls,
-  #                     rprt_nm_1L_chr = "Share_Outp_Rprt",
-  #                     abstract_args_ls = NULL,
-  #                     header_yaml_args_ls = header_yaml_args_ls,
-  #                     rprt_lup = TTU::transform_rprt_lup(TTU::rprt_lup, 
-  #                                                        add_suplry_rprt_1L_lgl = F,
-  #                                                        add_sharing_rprt_1L_lgl = T))
-  # ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "Share_Outp_Rprt",
-  #                                                       title_chr = params_ls$subtitle_1L_chr),
-  #                               dv_nm_1L_chr = dv_ls$primary_dv_chr[1],
-  #                               ds_url_1L_chr = dv_ls$primary_dv_chr[2],
-  #                               parent_dv_dir_1L_chr = paths_ls$dv_dir_1L_chr,
-  #                               paths_to_dirs_chr = paths_ls$reports_dir_1L_chr,
-  #                               inc_fl_types_chr = params_ls$inc_fl_types_chr,
-  #                               paths_are_rltv_1L_lgl = F)
 }
 ```
 
-# Secondary Analysis A (Anxiety + Depression)
 
-```{r echo = TRUE }
-# reference_1L_int <- 1
-# scndry_paths_ls <- TTU::write_scndry_analysis_dir(paths_ls,
-#                                              reference_1L_int = reference_1L_int)
+# Secondary Analysis 
+
+```{r}
+analysis_core_params_ls$predictors_lup <- 
+TTU::TTU_predictors_lup(TTU::make_pt_TTU_predictors_lup(short_name_chr = "SOFAS",
+                                              long_name_chr = c("SOFAS total score"),
+                                              min_val_dbl = 0,
+                                              max_val_dbl = 100,
+                                              class_chr = "integer",
+                                              increment_dbl = 1,
+                                              class_fn_chr = "youthvars::youthvars_sofas",
+                                              mdl_scaling_dbl = 0.01,
+                                              covariate_lgl = F))
 ```
 
 ## Run analysis
 
 ```{r echo = TRUE }
 TTU::write_scndry_analysis(analysis_core_params_ls = analysis_core_params_ls,
-                           candidate_covar_nms_chr = c("BADS", "SOFAS", "c_p_diag_s", "c_clinical_staging_s",
-                                                       "d_age",  "d_sex_birth_s", "d_sexual_ori_s", "d_country_bir_s", "d_relation_s",
-                                                       "d_studying_working"),
-                           candidate_predrs_chr = c("SCARED","OASIS","GAD7"),
-                           path_params_ls = path_params_ls,
-                           prefd_covars_chr = "BADS",
-                           reference_1L_int = 1,
-                           header_yaml_args_ls = header_yaml_args_ls,
-                           paths_ls = paths_ls)
-```
-
-## Report results
-
-```{r echo = TRUE }
-TTU::write_mdl_smry_rprt(header_yaml_args_ls,
-                    paths_ls = paths_ls,
-                    path_params_ls = path_params_ls,
-                    use_fake_data_1L_lgl = use_fake_data_1L_lgl,
-                    output_format_ls = output_format_ls,
-                    reference_1L_int = 1)
-# TTU::write_rprt_with_rcrd(path_to_outp_fl_1L_chr = here::here(paths_ls$path_from_top_level_1L_chr,
-#                                                               paths_ls$write_to_dir_nm_1L_chr,
-#                                                               paste0("secondary_",reference_1L_int),
-#                                                               "Output","I_ALL_OUTPUT_.RDS"),
-#                           paths_ls = scndry_paths_ls,
-#                           header_yaml_args_ls = header_yaml_args_ls,
-#                           use_fake_data_1L_lgl = use_fake_data_1L_lgl,
-#                           subtitle_1L_chr = "Results Report 2: TTU Models (Secondary Analysis A)",
-#                           rprt_subtitle_1L_chr = "Methods Report 5: Reporting Program (Secondary Analysis A).",
-#                           rprt_nm_1L_chr = "TS_TTU_Mdls_Smry",
-#                           rcrd_nm_1L_chr = "Write_Rprt_Rcrd",
-#                           output_type_1L_chr = output_format_ls$supplementary_outp_1L_chr,
-#                           rprt_output_type_1L_chr = output_format_ls$supplementary_outp_1L_chr,
-#                           nbr_of_digits_1L_int = output_format_ls$supplementary_digits_1L_int,
-#                           abstract_args_ls = NULL,
-#                           rcrd_rprt_append_ls = path_params_ls[1:2],
-#                           main_rprt_append_ls = list(existing_predrs_ls = readRDS(paste0(paths_ls$output_data_dir_1L_chr,
-#                                                                              "/I_ALL_OUTPUT_.RDS")) %>% 
-#                                           purrr::pluck("predr_vars_nms_ls")))
-```
-
-## Share (de-confidentialised) results
-
-```{r echo = TRUE }
-if(!is.null(dv_ls$secondary_1_dv_chr)){
-    TTU::write_study_outp_ds(dv_ls,
-                             output_format_ls = output_format_ls,
-                             path_params_ls = path_params_ls,
-                             paths_ls = paths_ls,
-                             reference_1L_int = 1)
-  # params_ls <- list(dv_ds_nm_and_url_chr = dv_ls$secondary_1_dv_chr,#
-  #                             dv_mdl_desc_1L_chr = "This is a time series transfer to utility model designed for use with the youthu R package.",
-  #                             inc_fl_types_chr = ".pdf",
-  #                             nbr_of_digits_1L_int = output_format_ls$supplementary_digits_1L_int,
-  #                             output_type_1L_chr = output_format_ls$supplementary_outp_1L_chr,
-  #                             purge_data_1L_lgl = FALSE,
-  #                             rprt_lup = TTU::rprt_lup,#
-  #                             subtitle_1L_chr = "Methods Report 6: Sharing Program (Secondary Analysis A)",#
-  #                             transform_paths_ls = list(fn = transform_paths_ls_for_scndry, #TTU::
-  #                                                       args_ls = list(reference_1L_int = reference_1L_int,
-  #                                                                      remove_prmry_1L_lgl = T)),#
-  #                             use_fake_data_1L_lgl = use_fake_data_1L_lgl) %>%
-  #   append(path_params_ls[1:2])
-  #  
-  #   TTU::write_report(params_ls = params_ls,
-  #                     paths_ls = scndry_paths_ls[names(scndry_paths_ls) != "prmry_analysis_dir_nm_1L_chr"],#
-  #                     rprt_nm_1L_chr = "Share_Outp_Rprt",
-  #                     abstract_args_ls = NULL,
-  #                     header_yaml_args_ls = header_yaml_args_ls,
-  #                     rprt_lup = TTU::transform_rprt_lup(TTU::rprt_lup, 
-  #                                                        add_suplry_rprt_1L_lgl = F,
-  #                                                        add_sharing_rprt_1L_lgl = T))
-  #   ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "Share_Outp_Rprt",
-  #                                                       title_chr = params_ls$subtitle_1L_chr),
-  #                               dv_nm_1L_chr = dv_ls$primary_dv_chr[1],#
-  #                               ds_url_1L_chr = dv_ls$primary_dv_chr[2],#
-  #                               parent_dv_dir_1L_chr = paths_ls$dv_dir_1L_chr,
-  #                               paths_to_dirs_chr = paths_ls$reports_dir_1L_chr,
-  #                               inc_fl_types_chr = params_ls$inc_fl_types_chr,
-  #                               paths_are_rltv_1L_lgl = F)
-}
-```
-
-
-# Secondary Analysis B (SOFAS)
-
-## Run analysis
-
-```{r echo = TRUE }
-#reference_1L_int <- 2
-# scndry_paths_ls <- TTU::write_scndry_analysis_dir(paths_ls,
-#                                              reference_1L_int = reference_1L_int)
-TTU::write_scndry_analysis(analysis_core_params_ls = analysis_core_params_ls,
-                           candidate_covar_nms_chr = c("d_sex_birth_s", "c_p_diag_s", "c_clinical_staging_s", "d_age",  
-                                                       "d_sexual_ori_s", "d_country_bir_s", "d_relation_s", "d_studying_working"),
+                           candidate_covar_nms_chr = c("d_age", "c_p_diag_s", "c_clinical_staging_s", "d_relation_s", "d_studying_working"),
                            candidate_predrs_chr = "SOFAS",
                            header_yaml_args_ls = header_yaml_args_ls,
                            path_params_ls = path_params_ls,
                            paths_ls = paths_ls,
                            prefd_covars_chr = NULL,
-                           reference_1L_int = 2)
+                           reference_1L_int = 1)
 ```
 
 ## Report results
 
 ```{r echo = TRUE }
 TTU::write_mdl_smry_rprt(header_yaml_args_ls,
-                    paths_ls = scndry_paths_ls,
-                    path_params_ls = path_params_ls,
-                    use_fake_data_1L_lgl = use_fake_data_1L_lgl,
-                    output_format_ls = output_format_ls,
-                    reference_1L_int = 2)
-# TTU::write_rprt_with_rcrd(path_to_outp_fl_1L_chr = here::here(paths_ls$path_from_top_level_1L_chr,
-#                                                               paths_ls$write_to_dir_nm_1L_chr,
-#                                                               paste0("secondary_",reference_1L_int),
-#                                                               "Output","I_ALL_OUTPUT_.RDS"),
-#                           paths_ls = scndry_paths_ls,
-#                           header_yaml_args_ls = header_yaml_args_ls,
-#                           use_fake_data_1L_lgl = use_fake_data_1L_lgl,
-#                           subtitle_1L_chr = "Results Report 3: TTU Models (Secondary Analysis B)",
-#                           rprt_subtitle_1L_chr = "Methods Report 8: Reporting Program (Secondary Analysis B).",
-#                           rprt_nm_1L_chr = "TS_TTU_Mdls_Smry",
-#                           rcrd_nm_1L_chr = "Write_Rprt_Rcrd",
-#                           output_type_1L_chr = output_format_ls$supplementary_outp_1L_chr,
-#                           rprt_output_type_1L_chr = output_format_ls$supplementary_outp_1L_chr,
-#                           nbr_of_digits_1L_int = output_format_ls$supplementary_digits_1L_int,
-#                           abstract_args_ls = NULL,
-#                           rcrd_rprt_append_ls = path_params_ls[1:2],
-#                           main_rprt_append_ls = list(existing_predrs_ls = readRDS(paste0(paths_ls$output_data_dir_1L_chr,
-#                                                                                          "/I_ALL_OUTPUT_.RDS")) %>% 
-#                                                        purrr::pluck("predr_vars_nms_ls")))
+                         paths_ls = paths_ls,
+                         path_params_ls = path_params_ls,
+                         use_fake_data_1L_lgl = use_fake_data_1L_lgl,
+                         output_format_ls = output_format_ls,
+                         reference_1L_int = 1)
+
 ```
 
 ## Share (de-confidentialised) results
@@ -429,90 +273,59 @@ TTU::write_mdl_smry_rprt(header_yaml_args_ls,
 ```{r echo = TRUE }
 if(!is.null(dv_ls$secondary_2_dv_chr)){
       TTU::write_study_outp_ds(dv_ls,
-                      output_format_ls = output_format_ls,
-                      path_params_ls = path_params_ls,
-                      paths_ls = paths_ls,
-                      reference_1L_int = 2)
-  # params_ls <- list(dv_ds_nm_and_url_chr = dv_ls$secondary_2_dv_chr,
-  #                             dv_mdl_desc_1L_chr = "This is a time series transfer to utility model designed for use with the youthu R package.",
-  #                             inc_fl_types_chr = ".pdf",
-  #                             nbr_of_digits_1L_int = output_format_ls$supplementary_digits_1L_int,
-  #                             output_type_1L_chr = output_format_ls$supplementary_outp_1L_chr,
-  #                             purge_data_1L_lgl = FALSE,
-  #                             rprt_lup = TTU::rprt_lup,
-  #                             subtitle_1L_chr = "Methods Report 9: Sharing Program (Secondary Analysis B)",
-  #                             transform_paths_ls = list(fn = TTU::transform_paths_ls_for_scndry, 
-  #                                                       args_ls = list(reference_1L_int = reference_1L_int,
-  #                                                                      remove_prmry_1L_lgl = T)),
-  #                             use_fake_data_1L_lgl = use_fake_data_1L_lgl) %>%
-  #   append(path_params_ls[1:2])
-  # 
-  #   TTU::write_report(params_ls = params_ls,
-  #                     paths_ls = scndry_paths_ls[names(scndry_paths_ls) != "prmry_analysis_dir_nm_1L_chr"],
-  #                     rprt_nm_1L_chr = "Share_Outp_Rprt",
-  #                     abstract_args_ls = NULL,
-  #                     header_yaml_args_ls = header_yaml_args_ls,
-  #                     rprt_lup = TTU::transform_rprt_lup(rprt_lup, 
-  #                                                        add_suplry_rprt_1L_lgl = F,
-  #                                                        add_sharing_rprt_1L_lgl = T))
-  #     ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "Share_Outp_Rprt",
-  #                                                       title_chr = params_ls$subtitle_1L_chr),
-  #                               dv_nm_1L_chr = dv_ls$primary_dv_chr[1],
-  #                               ds_url_1L_chr = dv_ls$primary_dv_chr[2],
-  #                               parent_dv_dir_1L_chr = paths_ls$dv_dir_1L_chr,
-  #                               paths_to_dirs_chr = paths_ls$reports_dir_1L_chr,
-  #                               inc_fl_types_chr = params_ls$inc_fl_types_chr,
-  #                               paths_are_rltv_1L_lgl = F)
+                               output_format_ls = output_format_ls,
+                               path_params_ls = path_params_ls,
+                               paths_ls = paths_ls,
+                               reference_1L_int = 1)
 }
 ```
-
 
 # Render Manuscript
 
 ```{r echo = TRUE }
-if(!use_fake_data_1L_lgl){
-  var_nm_change_lup <- tibble::tibble(old_nms_chr = c("PHQ9","GAD7"),
-                                      new_nms_chr = c("PHQ-9", "GAD-7"))
-study_descs_ls <- TTU::make_study_descs_ls(health_utl_nm_1L_chr = "AQol-6D",
-                                           time_btwn_bl_and_fup_1L_chr = "three months",
-                                           predr_ctgs_ls = list(`psychological distress` = c("K6"),
-                                                                depression =  c("BADS","PHQ9"),
-                                                                anxiety =  c("GAD7","OASIS","SCARED")))
-spine_of_results_ls <- TTU::make_results_ls_spine(output_data_dir_1L_chr = paths_ls$output_data_dir_1L_chr,
-                                                  var_nm_change_lup = var_nm_change_lup,
-                                                  study_descs_ls = study_descs_ls,
-                                                  nbr_of_digits_1L_int = output_format_ls$manuscript_digits_1L_int)
-cs_ts_ratios_tb = tibble::tibble(predr_nm_chr = c("K6","depression measurements", "anxiety measurements"),
-                                 ratios_chr = c(paste0("about ",
-                                                       round(spine_of_results_ls$mdl_coef_ratios_ls$`psychological distress`,2)),
-                                                paste0(round(mean(spine_of_results_ls$mdl_coef_ratios_ls$depression),2)),
-                                                paste0(round(min(spine_of_results_ls$mdl_coef_ratios_ls$anxiety),2)," or over")
-                                 ))
-ctgl_vars_regrouping_ls = list('Primary Diagnosis' = list(anxdpr = list(name_1L_chr = "anxiety/depression",
-                                                                          ctgs_chr = c("Anxiety", "Depression", "Depression and Anxiety"))),
-                                 'Clinical Stage' = list(early = list(name_1L_chr = "early (prior to first episode of a serious mental disorder) clinical stages",
-                                                                      ctgs_chr = c("0-1a","1b"))))
-sig_covars_some_predrs_mdls_tb = tibble::tibble(covars_ls = list(c("No other confounding factor"),
-                                                                                  c("sex at birth"),
-                                                                                                     c("primary diagnosis", "clinical staging","age")),
-                                                                 predrs_mdls_ls = list(c("PHQ-9"), c("K6"),c("anxiety and depression measurements other than PHQ-9")),
-                                                                 sig_thresh_dbl = c(NA_real_,0.01,NA_real_),
-                                                                 assn_strgth_chr = c(NA_character_,NA_character_,"weakly"))
-results_ls <- TTU::make_results_ls(spine_of_results_ls,
-                                   cs_ts_ratios_tb = cs_ts_ratios_tb,
-                                   ctgl_vars_regrouping_ls = ctgl_vars_regrouping_ls,
-                                   sig_covars_some_predrs_mdls_tb = sig_covars_some_predrs_mdls_tb,
-                                   sig_thresh_covars_1L_chr = "0.005")
-saveRDS(results_ls,paste0(paths_ls$output_data_dir_1L_chr,"/results_ls.RDS"))
-  rmarkdown::render("AQoL_VIH/AQoL_VIH.Rmd",
-                    output_format = NULL,
-                    params = list(figures_in_body_lgl = F,
-                                  output_type_1L_chr = "Word",
-                                  results_ls = results_ls,
-                                  tables_in_body_lgl = F),
-                    output_file = paste0("AQoL_VIH", ".docx"),
-                    output_dir = paths_ls$reports_dir_1L_chr)
-}
+# if(!use_fake_data_1L_lgl){
+#   var_nm_change_lup <- tibble::tibble(old_nms_chr = c("PHQ9","GAD7"),
+#                                       new_nms_chr = c("PHQ-9", "GAD-7"))
+# study_descs_ls <- TTU::make_study_descs_ls(health_utl_nm_1L_chr = "AQol-6D",
+#                                            time_btwn_bl_and_fup_1L_chr = "three months",
+#                                            predr_ctgs_ls = list(`psychological distress` = c("K6"),
+#                                                                 depression =  c("BADS","PHQ9"),
+#                                                                 anxiety =  c("GAD7","OASIS","SCARED")))
+# spine_of_results_ls <- TTU::make_results_ls_spine(output_data_dir_1L_chr = paths_ls$output_data_dir_1L_chr,
+#                                                   var_nm_change_lup = var_nm_change_lup,
+#                                                   study_descs_ls = study_descs_ls,
+#                                                   nbr_of_digits_1L_int = output_format_ls$manuscript_digits_1L_int)
+# cs_ts_ratios_tb = tibble::tibble(predr_nm_chr = c("K6","depression measurements", "anxiety measurements"),
+#                                  ratios_chr = c(paste0("about ",
+#                                                        round(spine_of_results_ls$mdl_coef_ratios_ls$`psychological distress`,2)),
+#                                                 paste0(round(mean(spine_of_results_ls$mdl_coef_ratios_ls$depression),2)),
+#                                                 paste0(round(min(spine_of_results_ls$mdl_coef_ratios_ls$anxiety),2)," or over")
+#                                  ))
+# ctgl_vars_regrouping_ls = list('Primary Diagnosis' = list(anxdpr = list(name_1L_chr = "anxiety/depression",
+#                                                                           ctgs_chr = c("Anxiety", "Depression", "Depression and Anxiety"))),
+#                                  'Clinical Stage' = list(early = list(name_1L_chr = "early (prior to first episode of a serious mental disorder) clinical stages",
+#                                                                       ctgs_chr = c("0-1a","1b"))))
+# sig_covars_some_predrs_mdls_tb = tibble::tibble(covars_ls = list(c("No other confounding factor"),
+#                                                                                   c("sex at birth"),
+#                                                                                                      c("primary diagnosis", "clinical staging","age")),
+#                                                                  predrs_mdls_ls = list(c("PHQ-9"), c("K6"),c("anxiety and depression measurements other than PHQ-9")),
+#                                                                  sig_thresh_dbl = c(NA_real_,0.01,NA_real_),
+#                                                                  assn_strgth_chr = c(NA_character_,NA_character_,"weakly"))
+# results_ls <- TTU::make_results_ls(spine_of_results_ls,
+#                                    cs_ts_ratios_tb = cs_ts_ratios_tb,
+#                                    ctgl_vars_regrouping_ls = ctgl_vars_regrouping_ls,
+#                                    sig_covars_some_predrs_mdls_tb = sig_covars_some_predrs_mdls_tb,
+#                                    sig_thresh_covars_1L_chr = "0.005")
+# saveRDS(results_ls,paste0(paths_ls$output_data_dir_1L_chr,"/results_ls.RDS"))
+#   rmarkdown::render("AQoL_VIH/AQoL_VIH.Rmd",
+#                     output_format = NULL,
+#                     params = list(figures_in_body_lgl = F,
+#                                   output_type_1L_chr = "Word",
+#                                   results_ls = results_ls,
+#                                   tables_in_body_lgl = F),
+#                     output_file = paste0("AQoL_VIH", ".docx"),
+#                     output_dir = paths_ls$reports_dir_1L_chr)
+# }
 ```
 
 # Purge dataset copies
