add validation of params for report creation

--- a/data-raw/inst/Markdown/Analyse.Rmd
+++ b/data-raw/inst/Markdown/Analyse.Rmd
@@ -69,7 +69,7 @@ params:
   rprt_type_1L_chr: "Analysis"
   seed_1L_int: 12345
   subtitle_1L_chr: "Main analysis algorithm for Transfer to Utility study"
-  use_fake_data_1L_lgl: TRUE
+  use_fake_data_1L_lgl: FALSE
   utl_class_fn_1L_chr: !r NULL
 subtitle: "`r params$subtitle_1L_chr`"
 date: "`r format.Date(Sys.Date(),'%B %d, %Y')`"
