--- a/vignettes/CSP_EQ5D_TTU.Rmd
+++ b/vignettes/CSP_EQ5D_TTU.Rmd
@@ -15,59 +15,17 @@ library(magrittr)
 
 # Input parameters
 
-## Bibliograhic data
-We begin by specifying the authorship data we wish to attach to all reports that we generate.
-
-```{r }
-authors_tb <- ready4show::authors_tb
-```
-```{r authorsds, eval = knitr::is_html_output(), results='asis'}
-authors_tb %>%
-  ready4show::print_table(output_type_1L_chr = "HTML",
-                          caption_1L_chr = "Authors table",
-                          mkdn_tbl_ref_1L_chr = "tab:authorsds")
-```
-```{r}
-institutes_tb <- ready4show::institutes_tb
-```
-```{r institutesds, eval = knitr::is_html_output(), results='asis'}
-institutes_tb %>%
-  ready4show::print_table(output_type_1L_chr = "HTML",
-                          caption_1L_chr = "Author institutions table",
-                          mkdn_tbl_ref_1L_chr = "tab:institutesds")
+## Reporting parameters
+```{, child=c('_Reporting_Params.Rmd')}
 ```
 
-We combine the data about authors with other bibliographic information.
+## Data parameters
 
-```{r}
-header_yaml_args_ls <- TTU::make_header_yaml_args_ls(authors_tb = authors_tb,
-                                                     institutes_tb = institutes_tb,
-                                                     title_1L_chr = "A hypothetical study using fake data for instructional purposes only",
-                                                     keywords_chr = c("this","is","a","replication","using","fake","data","do", "not","cite"))
-```
-
-## Report formatting
-We add parameters relating to the desired output format of the reports we will be producing.
-
-```{r }
-output_format_ls <- TTU::make_output_format_ls(manuscript_outp_1L_chr = "Word",
-                                               manuscript_digits_1L_int = 2L,
-                                               supplementary_outp_1L_chr = "PDF",
-                                               supplementary_digits_1L_int = 2L)
-```
-
-## Relative paths
-We next create an object that specifies the relative locations of the input data and the intended destination for analysis outputs and reports. The default settings of the `make_path_params_ls` function will write all output into a new directory, created one level up from the current working directory.
-
-```{r}
-path_params_ls <- TTU::make_path_params_ls("fake_data.rds")
-```
-
-## Dataset
+### Dataset
 As this is an illustrative example, we first must create a fake dataset (if using real data, skip this step).
 
 ```{r message=FALSE}
-ds_tb <- readRDS(url("https://dataverse.harvard.edu/api/access/datafile/4749888"))
+ds_tb <- readRDS(url("https://dataverse.harvard.edu/api/access/datafile/4749888")) 
 ```
 ```{r inputds, eval = knitr::is_html_output(), results='asis'}
 ds_tb %>%
@@ -77,10 +35,17 @@ ds_tb %>%
                           mkdn_tbl_ref_1L_chr = "tab:inputds")
 ```
 
+We note our use of synthetic data by creating an object `use_fake_data_1L_lgl` and setting it to `TRUE`. For real world application - set this variable to `FALSE`.
+
+```{r }
+use_fake_data_1L_lgl <-  TRUE
+```
+
+### Data dictionary
 A data dictionary must also be supplied for the dataset. The dictionary must be of class `ready4_dictionary` from the `ready4use` package.
 
 ```{r}
-dictionary_tb <- TTU::make_eq5d_ds_dict(ds_tb)
+dictionary_tb <- TTU::make_eq5d_ds_dict(ds_tb) 
 ```
 ```{r dictionary, eval = knitr::is_html_output(), results='asis'}
 dictionary_tb %>%
@@ -89,16 +54,11 @@ dictionary_tb %>%
                           mkdn_tbl_ref_1L_chr = "tab:dictionary")
 ```
 
-We note our use of synthetic data by creating an object `use_fake_data_1L_lgl` and setting it to `TRUE`. For real world application - set this variable to `FALSE`.
-
-```{r }
-use_fake_data_1L_lgl <-  TRUE
-```
-
+### Dataset metadata
 We describe the features of our dataset that are most relevant to the analyses we are planning to undertake. Note all, Multi-Attribute Utility Instrument (MAUI) question variables must start with a common prefix, which needs to be passed to the `maui_item_pfx_1L_chr` argument. The dataset does not need to include variables for total health utility scores (weighted and unweighted), as these variables will be computed during the analysis. However, you can supply the names you wish assigned to these variables once they are computed using the `utl_wtd_var_nm_1L_chr` and `utl_unwtd_var_nm_1L_chr` arguments.
 
 ```{r echo = TRUE}
-ds_descvs_ls <- TTU::make_ds_descvs_ls(candidate_predrs_chr = c("k10_int","psych_well_int"),
+ds_descvs_ls <- TTU::make_ds_descvs_ls(candidate_predrs_chr = c("k10_int","psych_well_int"),#
                      cohort_descv_var_nms_chr = c("d_age", "Gender", "d_relation_s","d_sexual_ori_s", "Region", "CALD", "d_studying_working"),
                      dictionary_tb = dictionary_tb, 
                      id_var_nm_1L_chr = "uid", 
@@ -110,7 +70,7 @@ ds_descvs_ls <- TTU::make_ds_descvs_ls(candidate_predrs_chr = c("k10_int","psych
                      utl_unwtd_var_nm_1L_chr = "EQ5d_cumulative_dbl")
 ```
 
-## Candidate predictors
+### Candidate predictors metadata
 We create a lookup table with metadata on the dataset variables that we will be exploring as candidate predictors.
 
 ```{r}
@@ -126,8 +86,10 @@ predictors_lup <- TTU::TTU_predictors_lup(TTU::make_pt_TTU_predictors_lup(short_
                                               covariate_lgl = F))
 ```
 
-## MAUI parameters
-We also need to provide information specific to the Multi-Attribute Utility Instrument (MAUI) used to collect the data from which health utility will be derived. If our source dataset does not include a pre-calculated weighted utility variable, we must supply a function to calculate this variable using the `maui_scoring_fn` argument. Note if specifying such a function, it must:
+## Analysis parameters
+
+### Multi-Attribute Utility Instrument (MAUI) parameters
+We also need to provide information specific to the MAUI used to collect the data from which health utility will be derived. If our source dataset does not include a pre-calculated weighted utility variable, we must supply a function to calculate this variable using the `maui_scoring_fn` argument. Note if specifying such a function, it must:
  - include identical arguments as in the below example (including names and order), even if all arguments are not required; and
  - also calculate an unweighted score that is a simple sum of all maui item question responses (e.g. the last three lines of the example `maui_scoring_fn`).
 
@@ -167,8 +129,7 @@ mdl_types_lup %>%
                           mkdn_tbl_ref_1L_chr = "tab:mdltypeslup")
 ```
 
-## Analysis parameters
-We first combine our candidate model types lookup table with parameters specific to the analyses to be run to compare the performance of each model.
+We combine our candidate model types lookup table with parameters specific to the analyses to be run to compare the performance of each model.
 
 ```{r}
 mdl_smry_ls <- TTU::make_mdl_smry_ls(mdl_types_lup = mdl_types_lup,
@@ -176,24 +137,30 @@ mdl_smry_ls <- TTU::make_mdl_smry_ls(mdl_types_lup = mdl_types_lup,
                                      max_nbr_of_boruta_mdl_runs_int = 300L)
 ```
 
+We create a summary object that contains the core parameters that will be common to most of the analyses we are planning to run.
+
 ```{r echo = TRUE }
 analysis_core_params_ls <- TTU::make_analysis_core_params_ls(ds_descvs_ls = ds_descvs_ls,
                                                              mdl_smry_ls = mdl_smry_ls,
                                                              output_format_ls = output_format_ls,
                                                              predictors_lup = predictors_lup,
                                                              use_fake_data_1L_lgl = use_fake_data_1L_lgl,
-                                                             control_ls = list(adapt_delta = 0.99))
+                                                             control_ls = list(adapt_delta = 0.95))
 ```
 
-## Reporting details
+## Path parameters
+We next create an object that specifies the relative locations of the input data and the intended destination for analysis outputs and reports. The default settings of the `make_path_params_ls` function will write all output into a new directory, created one level up from the current working directory.
 
+```{r}
+path_params_ls <- TTU::make_path_params_ls("fake_data.rds")
+```
 ```{r echo = TRUE }
-paths_ls <- TTU::write_main_oupt_dir(path_params_ls, 
+path_params_ls$paths_ls <- TTU::write_main_oupt_dir(path_params_ls, 
                                      use_fake_data_1L_lgl = use_fake_data_1L_lgl)
 ```
 
 ## Output repositories
-Provide details of dataverse dataset(s) to which results will be posted. If you do not permissions for any dataverse datasets, set `dv_ls <- NULL`.
+We provide details of dataverse dataset(s) to which results will be posted. If you do not permissions for a dataverse dataset to write to, use `dv_ls <- NULL`.
 
 ```{r echo = TRUE }
 dv_ls <- list(primary_dv_chr = c("fakes","https://doi.org/10.7910/DVN/612HDC"))
@@ -203,18 +170,19 @@ dv_ls <- list(primary_dv_chr = c("fakes","https://doi.org/10.7910/DVN/612HDC"))
 
 ## Consolidate required parameters
 ```{r}
-prmry_analysis_params_ls <- TTU::make_prmry_analysis_params_ls(analysis_core_params_ls,
-                                                          candidate_covar_nms_chr = c("d_sex_birth_s", "d_age",  "d_sexual_ori_s", "d_relation_s", "d_studying_working"),
-                                                          ds_tb = ds_tb, 
-                                                          path_params_ls = path_params_ls,
-                                                          maui_params_ls = maui_params_ls)
+valid_params_ls_ls <- TTU::make_valid_params_ls_ls(analysis_core_params_ls,
+                                                   candidate_covar_nms_chr = c("d_sex_birth_s", "d_age",  "d_sexual_ori_s", "d_relation_s", "d_studying_working"),
+                                                   ds_tb = ds_tb, 
+                                                   path_params_ls = path_params_ls,
+                                                   maui_params_ls = maui_params_ls)
 ```
+
 
 ## Run analysis
 
-```{r echo = TRUE }
-TTU::write_report(params_ls = prmry_analysis_params_ls,
-                  paths_ls = paths_ls,
+```{r echo = TRUE}
+TTU::write_report(params_ls = valid_params_ls_ls$params_ls,
+                  paths_ls = path_params_ls$paths_ls,
                   rprt_nm_1L_chr = "Main_Analysis_Rprt",
                   abstract_args_ls = NULL,
                   header_yaml_args_ls = header_yaml_args_ls)
@@ -224,10 +192,9 @@ TTU::write_report(params_ls = prmry_analysis_params_ls,
 
 ```{r echo = TRUE }
 TTU::write_mdl_smry_rprt(header_yaml_args_ls,
-                    paths_ls = paths_ls,
-                    path_params_ls = path_params_ls,
-                    use_fake_data_1L_lgl = use_fake_data_1L_lgl,
-                    output_format_ls = output_format_ls)
+                         path_params_ls = path_params_ls,
+                         use_fake_data_1L_lgl = use_fake_data_1L_lgl,
+                         output_format_ls = output_format_ls)
 ```
 
 ## Share (de-confidentialised) results
@@ -237,7 +204,6 @@ if(!is.null(dv_ls)){
   TTU::write_study_outp_ds(dv_ls,
                            output_format_ls = output_format_ls,
                            path_params_ls = path_params_ls,
-                           paths_ls = paths_ls,
                            use_fake_data_1L_lgl = use_fake_data_1L_lgl)
 }
 ```
